--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -1,5 +1,6 @@
 packages:
   - 'web'
+  - 'demo'
   # all packages in direct subdirs of packages/
   - 'packages/*'
   # all packages in subdirs of components/
