--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -1,9 +1,10 @@
 packages:
-  - 'web'
-  - 'demo'
+  - "web"
+  - "demo"
+  - "api"
   # all packages in direct subdirs of packages/
-  - 'packages/*'
+  - "packages/*"
   # all packages in subdirs of components/
-  - 'components/**'
+  - "components/**"
   # exclude packages that are inside test directories
-  - '!**/test/**'
+  - "!**/test/**"
