--- a/api/wrangler.toml
+++ b/api/wrangler.toml
@@ -1,5 +1,5 @@
 name = "pageview-counter"
-main = "src/worker.ts"
+main = "src/main.ts"
 compatibility_date = "2023-07-24"
 
 # Variable bindings. These are arbitrary, plaintext strings (similar to environment variables)
@@ -7,6 +7,10 @@ compatibility_date = "2023-07-24"
 # Docs: https://developers.cloudflare.com/workers/platform/environment-variables
 # [vars]
 # MY_VARIABLE = "production_value"
+
+kv_namespaces = [
+  { binding = "KV", id = "c2fd1b97aae34107866e6975df9f9a65" }
+]
 
 # Bind a KV Namespace. Use KV as persistent storage for small key-value pairs.
 # Docs: https://developers.cloudflare.com/workers/runtime-apis/kv
