--- a/api/package.json
+++ b/api/package.json
@@ -8,10 +8,12 @@
   },
   "devDependencies": {
     "@cloudflare/workers-types": "^4.20230419.0",
+    "@types/itty-router-extras": "^0.4.0",
     "typescript": "^5.0.4",
     "wrangler": "^3.0.0"
   },
   "dependencies": {
-    "itty-router": "^3.0.12"
+    "itty-router": "^3.0.12",
+    "itty-router-extras": "^0.4.5"
   }
 }
