--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -2,6 +2,7 @@ packages:
   - "web"
   - "demo"
   - "api"
+  - "lib"
   # all packages in direct subdirs of packages/
   - "packages/*"
   # all packages in subdirs of components/
