--- a/web/package.json
+++ b/web/package.json
@@ -23,19 +23,19 @@
   "devDependencies": {
     "@builder.io/qwik": "^1.2.6",
     "@builder.io/qwik-city": "^1.2.6",
-    "@types/eslint": "8.40.2",
-    "@types/node": "^20.4.0",
-    "@typescript-eslint/eslint-plugin": "5.61.0",
-    "@typescript-eslint/parser": "5.61.0",
-    "eslint": "8.44.0",
+    "@cloudflare/workers-types": "^4.20230801.0",
+    "@types/eslint": "8.44.2",
+    "@types/node": "^20.4.7",
+    "@typescript-eslint/eslint-plugin": "6.2.1",
+    "@typescript-eslint/parser": "6.2.1",
+    "eslint": "8.46.0",
     "eslint-plugin-qwik": "^1.2.6",
-    "prettier": "2.8.8",
+    "itty-router": "^4.0.14",
+    "prettier": "3.0.1",
     "typescript": "5.1.6",
-    "undici": "5.22.1",
-    "vite": "4.4.0",
+    "undici": "5.23.0",
+    "vite": "4.4.8",
     "vite-tsconfig-paths": "4.2.0",
-    "wrangler": "^3.0.0",
-    "@cloudflare/workers-types": "^4.20230419.0",
-    "itty-router": "^3.0.12"
+    "wrangler": "^3.4.0"
   }
 }
