--- a/api/package.json
+++ b/api/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "api",
+	"name": "@pvc/api",
 	"version": "0.0.0",
 	"private": true,
 	"scripts": {
@@ -9,7 +9,7 @@
 	},
 	"devDependencies": {
 		"@cloudflare/workers-types": "^4.20230801.0",
-		"@types/itty-router-extras": "^0.4.0",
+		"@pvc/utils": "workspace:*",
 		"typescript": "^5.1.6",
 		"wrangler": "^3.4.0"
 	},
