--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -3,6 +3,7 @@ packages:
   - "demo"
   - "api"
   - "lib"
+  - "utils"
   # all packages in direct subdirs of packages/
   - "packages/*"
   # all packages in subdirs of components/
