--- a/api/package.json
+++ b/api/package.json
@@ -14,6 +14,7 @@
 		"wrangler": "^3.30.1"
 	},
 	"dependencies": {
-		"itty-router": "^4.0.27"
+		"itty-router": "^4.0.27",
+		"zod": "^3.22.4"
 	}
 }
